# neuro_hack_2023

./: P_dataset_a3d3.py  encmodel.py  preprocess.py  pyproject.toml  ratbrains_gnn.ipynb  readme.md  trans_model.py
Notebooks/: ratbrains_gnn.ipynb
Transformer_Work/: encmodel.py  trans_model.py
touch_project/: preprocess.py  pyproject.toml
touch_project/Transformer_Work/: encmodel.py  trans_model.py
